# tiez-slim

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
assets/fonts/: README.md
locales/: en-US.yml  zh-CN.yml
scripts/: generate_emoji_data.py  i18n-check.sh
src/: AGENTS.md  app.rs  backup.rs  clipboard.rs  emoji_data.rs  encryption.rs  i18n.rs  ipc.rs  lib.rs  main.rs  model.rs  sound.rs  storage.rs  storage_io.rs
src/actions/: mod.rs
src/encryption/: mod.rs  queue.rs
src/platform/: linux.rs  linux_xfixes.rs  mod.rs  windows.rs
src/search/: mod.rs
src/snippets/: interpolate.rs  mod.rs
src/sync/: mod.rs
src/ui/: hotkey.rs  mod.rs  theme.rs  toolbar_actions.rs  widgets.rs
src/ui/settings/: mod.rs  privacy.rs  sync.rs
