[package]
name = "tiez-slim-linux"
version = "0.3.0"
edition = "2024"
default-run = "tiez-slim-linux"

[features]
default = ["kde_connect"]
devtools = ["log-miss-tr"]
log-miss-tr = ["rust-i18n/log-miss-tr", "dep:log", "dep:env_logger"]
secure_storage = ["aes-gcm", "keyring", "base64", "getrandom"]
kde_connect = ["dep:kdeconnect-proto", "dep:mdns-sd"]

[[bin]]
name = "tiez-cli"
path = "src/bin/tiez_cli.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
dirs = "5.0"
eframe = { version = "0.28", features = ["wgpu"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["svg"] }
fontdb = "0.23"
html2text = "0.17"
image = { version = "=0.25.10", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
twemoji-assets = { version = "1.5", default-features = false, features = ["svg"] }
open = "5"
rust-i18n = "4"
globset = "0.4"
nucleo-matcher = "0.3"
clap = { version = "4", features = ["derive"] }
aes-gcm = { version = "0.10", optional = true, features = ["getrandom"] }
keyring = { version = "3", optional = true }
base64 = { version = "0.22", optional = true }
getrandom = { version = "0.2", optional = true }
kdeconnect-proto = { version = "=0.2.1", optional = true }
lru = "0.12"
mdns-sd = { version = "0.11", optional = true }
rfd = "0.14"
uuid = { version = "1", features = ["v4"] }
ctrlc = "3"
libc = "0.2"
shlex = "1.3"

log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3", features = ["blocking"] }
x11-clipboard = "0.9"
x11rb = "0.13"
# tokio is Linux-only because it's only used by KDE Connect (T28-T31)
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "macros", "time", "fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
